<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCorner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_border"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textStyle="bold"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorOutlineVariant"
                    />
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"
                    android:padding="16dp">
                    <TableRow
                        android:gravity="center_vertical">
                        <TextView
                            android:text="@string/title_corner_radius"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                            />
                        <androidx.appcompat.widget.AppCompatSeekBar
                            android:id="@+id/seekCorner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="120dp"
                            android:max="24"
                            />
                    </TableRow>
                    <TableRow
                        android:gravity="center_vertical"
                        android:layout_marginTop="16dp">
                        <TextView
                            android:text="@string/title_border_width"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                            />
                        <androidx.appcompat.widget.AppCompatSeekBar
                            android:id="@+id/seekBorderWidth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="120dp"
                            android:max="24"
                            />
                    </TableRow>
                    <TableRow
                        android:gravity="center_vertical"
                        android:layout_marginTop="16dp">
                        <TextView
                            android:text="@string/title_color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                            />
                        <View
                            android:id="@+id/previewColor"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginStart="120dp"
                            android:background="?attr/selectableItemBackground"
                            />
                    </TableRow>
                    <TableRow
                        android:gravity="center_vertical"
                        android:layout_marginTop="16dp">
                        <TextView
                            android:text="@string/title_alpha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                            />
                        <androidx.appcompat.widget.AppCompatSeekBar
                            android:id="@+id/seekBorderAlpha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="120dp"
                            android:max="255"
                            />
                    </TableRow>
                </TableLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_behavior"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textStyle="bold"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorOutlineVariant"
                    />
                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">
                    <TableRow android:gravity="center_vertical">
                        <TextView
                            android:text="@string/title_auto_snap"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchSnap"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                </TableLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>